/dolar endpoint init
