# handlers/GetPlatforms.go
@@ -1,0 +1,42 @@
+package handlers
+
+import (
+	"github.com/go-openapi/runtime/middleware"
+	"github.com/rootspyro/Dollar-VzlAPI/gen/models"
+	"github.com/rootspyro/Dollar-VzlAPI/gen/restapi/operations/dolar"
+	"github.com/rootspyro/Dollar-VzlAPI/services"
+)
+
+type GetPlatformsImpl struct {
+	srv *services.DolarServices
+}
+
+func NewGetPlatformsImpl(s *services.DolarServices ) dolar.GetDolarPlatformsHandler{
+	return &GetPlatformsImpl{
+		srv: s,
+	}
+}
+
+func( impl *GetPlatformsImpl )Handle( params dolar.GetDolarPlatformsParams ) middleware.Responder {
+	
+	data := impl.srv.GetPlatformsList()
+
+	var platformsData []*models.DolarPlatform
+
+	for _, name := range data {
+		platform := &models.DolarPlatform{
+			Plataforma: name,
+			Endpoint: "/api/v1/dolar/" + name,
+		}
+
+		platformsData = append(platformsData, platform)
+	}
+
+	response := &models.DolarPlatforms{
+		Status: "success",
+		Data: platformsData,
+	}
+	return dolar.NewGetDolarPlatformsOK().WithPayload(response)
+}
+
+
